objects/A__c.object
<CustomObject>
    <description>DDSA</description>
    <fields>
        <fullName>ABC__c</fullName>
        <label>ABC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>C__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>C</label>
        <referenceTo>C__c</referenceTo>
        <relationshipLabel>A</relationshipLabel>
        <relationshipName>A</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DEF__c</fullName>
        <label>DEF</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Hello__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Hello</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>New</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>One__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>One</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>InActive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <displayFormat>t-{000}</displayFormat>
        <label>Test</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Time__c</fullName>
        <label>Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>srinu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch3</label>
        <referenceTo>Branch3__c</referenceTo>
        <relationshipLabel>A</relationshipLabel>
        <relationshipName>A</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>A</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Hello__c</columns>
        <columns>One__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>A Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>A</pluralLabel>
    <recordTypes>
        <fullName>NewTest</fullName>
        <active>true</active>
        <label>NewTest</label>
    </recordTypes>
    <recordTypes>
        <fullName>newType1</fullName>
        <active>true</active>
        <description>cscscx</description>
        <label>newType1</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>